--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,34 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary: hsla(0, 0%, 4%, 1);
+  --secondary: hsla(210, 20%, 5%, 1);
+  --common: hsla(123, 57%, 66%, 1);
+  --donate: hsla(60, 30%, 56%, 1);
+
+  --text-primary: hsla(0, 0%, 90%, 1);
+  --text-secondary: hsla(0, 0%, 48%, 1);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --font-sans: var(--font-dm-sans);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-common: var(--common);
+  --color-donate: var(--donate);
+  --color-text-primary: var(--text-primary);
+  --color-text-secondary: var(--text-secondary);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+body button {
+  cursor: pointer;
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+body h1,
+h2,
+p {
+  cursor: default;
 }
-
-
 .custom-scrollbar::-webkit-scrollbar {
   width: 6px;
 }
